--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/nav7033/thorium.git"
   },
-  "author": "Naveen Kumar Mandal",
+  "author": "Subhajit Maity",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nav7033/thorium/issues"
